fixed spacing for img and border radius

--- a/recipe-page/styles.css
+++ b/recipe-page/styles.css
@@ -163,14 +163,16 @@
       margin: 120px auto;
       max-width: 736px;
       border-radius: 24px;
+      padding: 2.5rem;
     }
 
     img {
-      padding: 2.5rem 2.5rem 0 2.5rem; /* border radius is not working due to padding. To review img size */
+      margin-bottom: 2rem;
+      border-radius: 12px;
     }
 
     .content {
-      padding: 2.5rem;
+      padding: 0;
     }
     
     h1 {
